<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="50dp"
    tools:context=".SignupFragment">

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_user_email"/>
    <EditText
        android:id="@+id/signup_user_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_password"/>
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/login_password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/login__confirm_password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password"/>
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="false"
        android:text="@string/signup_button_title"
        app:layout_constraintTop_toBottomOf="@id/signup_confirm_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>