<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TiffinServicesListFragment">

    <EditText
        android:id="@+id/food_service_search_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/string_bar_hint"
        android:drawableStart="@drawable/ic_search_food_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:id="@+id/filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/food_service_search_bar"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/tiffin_service_filter"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:padding="5dp"
                android:text="@string/tiffin_service_filter_title"
                android:textAllCaps="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:padding="5dp"
                android:text="@string/rating_filter_title"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="5dp"
                android:padding="5dp"
                android:text="@string/mess_service_filter_title"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tiffin_services_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filters"
        tools:listitem="@layout/service_list_item"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>