<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.LoginAdminFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="login Imgae"
                android:scaleType="centerCrop"
                android:src="@drawable/login_page1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:text="Namaste!"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="@dimen/_270dp"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_15dp"
                android:autofillHints="emailAddress"
                android:hint="@string/login_username_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="@dimen/_270dp"
                android:layout_height="@dimen/_50dp"
                android:autofillHints="password"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/login_username"
                app:layout_constraintStart_toStartOf="@+id/login_username"
                app:layout_constraintTop_toBottomOf="@+id/login_username" />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_42dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/round_btn"
                android:text="@string/login_button_title"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sp"
                app:layout_constraintEnd_toEndOf="@+id/login_password"
                app:layout_constraintStart_toStartOf="@+id/login_password"
                app:layout_constraintTop_toBottomOf="@+id/login_password" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/login_btn"
                app:layout_constraintStart_toStartOf="@+id/login_btn"
                app:layout_constraintTop_toBottomOf="@id/login_btn">

                <TextView
                    android:id="@+id/create_new_user_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_new_user_text"
                    android:textSize="@dimen/_13sp"
                    app:layout_constraintStart_toStartOf="@+id/login_btn"
                    tools:layout_editor_absoluteY="537dp" />

                <TextView
                    android:id="@+id/register_user_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3dp"
                    android:text="@string/register_btn_title"
                    android:textColor="@color/teal_700"
                    android:textSize="@dimen/_13sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/login_btn"
                    app:layout_constraintHorizontal_bias="0.116"
                    app:layout_constraintStart_toEndOf="@+id/create_new_user_title"
                    app:layout_constraintTop_toBottomOf="@+id/login_with_otp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
